--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,4 @@
+    <!-- 웹 페이지 하단에 위치하는 푸터 부분 -->
     <div class="footer">
         <img src="/static/logo.png"/>
         <p id="copyright"> Fi:Ding&copy;copyright.2023</p>
