--- a/templates/header.html
+++ b/templates/header.html
@@ -21,11 +21,14 @@
     />
 
     <title>Fi:Ding</title>
-    <!-- 파비콘 -->
+    <!-- 파비콘 설정 -->
     <link rel="icon" href="/static/favicon_image.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/main.css" />
+    <!-- 차트 라이브러리 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- jQuery CDN 링크 -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <!-- jQuery Maphilight 라이브러리 -->
     <script type="text/javascript" src="static/jquery.maphilight.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
