--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,4 @@
+<!-- 'header.html' 파일의 내용이 현재 위치에 삽입 -->
 {% include 'header.html' %}
 <div class="container-fluid">
   <div class="main-content">
@@ -225,4 +226,5 @@
     </div>
   </div>
 </div>
+<!-- 'footer.html' 파일의 내용이 현재 위치에 삽입 -->
 {% include 'footer.html' %}
